--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+forch (0.16) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Anurag Porripireddi <anuragprdi@google.com>  Mon, 09 Dec 2019 18:23:48 +0000
+
 forch (0.1.1) unstable; urgency=medium
 
   * release of 0.1.1
