Add grpc dependancy for python package

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,9 @@
-Corporate Contributors
-======================
-Copyright (C) 2018 Google LLC
-
-Individual Contributors
-=======================
 Anurag Porripireddi <anuragprdi@google.com>
+Brad Cowie <brad@wand.net.nz>
+Puneet Batta <puneetbatta@google.com>
+Renovate Bot <bot@renovateapp.com>
+Trevor <grafnu@users.noreply.github.com>
 Trevor Pering <peringknife@google.com>
-Yufeng Duan <yfd@google.com>
+Yufeng Duan <55268016+didovesei@users.noreply.github.com>
+pbatta <puneetbatta@google.com>
+renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
