Set version 0.64.2 in changelog
Change-Id: I25b6aa4772ee779a5cdf093db5fa08ca7b2c9a1a

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-forch (0.16) UNRELEASED; urgency=medium
+forch (0.64.2) UNRELEASED; urgency=medium
 
   * New upstream release
+  * New upstream release 0.64.2
 
- -- Anurag Porripireddi <anuragprdi@google.com>  Mon, 09 Dec 2019 18:23:48 +0000
+ -- Anurag Porripireddi <anuragprdi@google.com>  Tue, 05 Oct 2021 17:35:42 -0700
 
 forch (0.1.1) unstable; urgency=medium
 
